<resources>
    <string name="app_name">AlbumFtp</string>
    <string name="original_image_loaded">Original image loaded</string>
    <string name="failed_to_load">Failed</string>
    <string name="saved">Saved</string>
    <string name="sync_complete">Sync Complete</string>
    <string name="sync_begin">Downloading</string>
    <string name="save">Save</string>
    <string name="ftp_set">FTP/SFTP Server Setting</string>
    <string name="cancel">Cancel</string>
    <string name="no_need_sync">Sync again in {0} days</string>
    <string name="connecting">Connecting</string>
    <string name="failed_to_connect">Failed to connect</string>
    <string name="loading_file_list">Loading file list from server</string>
    <string name="failed_to_load_list">Failed to list</string>
    <string name="x_files_to_download">{0} files to download</string>
    <string name="downloading">Downloading {0}/{1}:{2}</string>
    <string name="sync_done">{0} files downloaded</string>
    <string name="no_file_selected">Please select a file</string>
    <string name="deleted">{0} files deleted</string>
    <string name="select_file">Select file</string>
    <string name="no_permission">Permission rejected</string>
    <string name="ftp_setting">FTP server setting</string>
    <string name="delete_local_file">Delete Local Files</string>
    <string name="ftp_name">FTP server (e.g. 192.168.0.1)</string>
    <string name="ftp_port">FTP server port, 21 is default port (e.g. 21)</string>
    <string name="user_name">User name (e.g. Anonymous)</string>
    <string name="password">Password</string>
    <string name="base_path">Case-sensitive!The root path containing images (e.g. / or /photos/summer/)</string>
    <string name="is_sftp">Is Sftp</string>
    <string name="part_done">Part done. {0} not downloaded, {1} scale failed</string>
    <string name="original_video_loaded">Original video downloaded</string>
    <string name="backup_ftp_name">Backup FTP server (e.g. 192.168.0.1)</string>
    <string name="backup_ftp_port">Backup FTP server port, 21 is default port (e.g. 21)</string>
    <string name="view_log">View Log</string>
    <string name="close">Close</string>
    <string name="copy_log">Copy Log</string>
    <string name="log_copied_toast">Logs copied into clipboard</string>
    <string name="reconnected">Server reconnected</string>
    <string name="reconnecting" >Reconnecting</string>
    <string name="primary_server" >Primary Server</string>
    <string name="backup_server" >Backup Server</string>
    <string name="check_sync_status">Checking syncing status</string>
    <string name="notification_title">AlbumFtp</string>
    <string name="download_notification_name">Media Downloading Progress</string>
    <string name="no_log">No log yet</string>
    <string name="saved_to_gallery">{0} saved</string>
    <string name="save_partial_result"> {0} saved, {1} failed</string>
    <string name="delete_server_file">Delete Server Files</string>
    <string name="confirm_delete_server_files">Are you sure you want to delete the selected files from the server? This action cannot be undone!</string>
    <string name="server_files_deleted">{0} files deleted from server</string>
    <string name="failed_to_delete_server_files">Failed to delete some files from server</string>
    <string name="enable_upload">Enable Upload to Server</string>
    <string name="uploading">Uploading {0}/{1}:{2}</string>
    <string name="x_files_to_upload">{0} files to upload</string>
    <string name="upload_complete">{0} files uploaded</string>
    <string name="upload_part_done">Upload partially done. {0} succeeded, {1} failed</string>
    <string name="no_need_upload">No new files to upload</string>
    <string name="upload_notification_name">Media Uploading Progress</string>
    <string name="delete_server_file">Delete Server Files</string>
    <string name="confirm_delete_server_files">Are you sure you want to delete the selected files from the server? This action cannot be undone!</string>
    <string name="server_files_deleted">{0} files deleted from server</string>
    <string name="failed_to_delete_server_files">Failed to delete some files from server</string>


</resources>