<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_settings"
        android:title="@string/ftp_setting"
        android:icon="@android:drawable/ic_menu_preferences"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_save"
        android:title="@string/save" />

    <item
        android:id="@+id/action_delete"
        android:title="@string/delete_local_file" />

    <item
        android:id="@+id/action_view_log"
        android:title="@string/view_log"
    android:icon="@android:drawable/ic_menu_info_details"
    app:showAsAction="never" />

    <item
        android:id="@+id/action_copy_log"
        android:title="@string/copy_log"
        android:icon="@android:drawable/ic_menu_info_details"
        app:showAsAction="never" />


</menu>
